[tool.poetry]
name = "front jasonbot-ru"
version = "0.0.1"
description = "Front for JasonBot.ru"
authors = ["shardyllue <shrdyllue@gmail.com>"]
readme = "README.md"
packages = [{include = "front jasonbot"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
Jinja2 = "^3.1.2"
uvicorn = "^0.23.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
